[package]
name = "live-view"
version = "0.0.3"
authors = ["Nathan Jaremko <nathan@jaremko.ca>"]
edition = "2018"
description = "A Live View implementation for Actix Web"
license = "MIT"
repository = "https://github.com/njaremko/liveview-rust"

[dependencies]
actix-web = "1.0"
actix-web-actors = "1.0"
actix = "0.8"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.8"
hashbrown = { version = "0.5", features = ["serde"] }